LIBS = @ZORP_LIBS@ @MODULES_LIBS@

check_PROGRAMS = pystruct test_audit test_szig test_dynexpect test_ipv6_radix

pystruct_SOURCES = pystruct.c
test_audit_SOURCES = test_audit.c
test_szig_SOURCES = test_szig.c
test_dynexpect_SOURCES = test_dynexpect.c
test_ipv6_radix_SOURCES = test_ipv6_radix.c

TESTS = pystruct test_audit test_szig test_ipv6_radix

EXTRA_DIST = pystruct.py
